native/emulator_loop/include/emulator_loop.h

// ── Pure-C libretro callback getters ──────────────────────────────────────
// Call retro_set_XXX with these after retro_load_game() succeeds, then start
// emulator_loop_start(). The callbacks are thread-safe and do NOT invoke Dart.

typedef void   (*emu_video_refresh_t)(const void*, unsigned, unsigned, size_t);
typedef size_t (*emu_audio_batch_t)(const int16_t*, size_t);
typedef void   (*emu_audio_single_t)(int16_t, int16_t);
typedef void   (*emu_input_poll_t)(void);
typedef int16_t(*emu_input_state_t)(unsigned, unsigned, unsigned, unsigned);
typedef unsigned (*emu_environment_t)(unsigned, void*);
emu_video_refresh_t  emulator_loop_video_cb(void);
emu_audio_batch_t    emulator_loop_audio_batch_cb(void);
emu_audio_single_t   emulator_loop_audio_single_cb(void);
emu_input_poll_t     emulator_loop_input_poll_cb(void);
emu_input_state_t    emulator_loop_input_state_cb(void);
emu_environment_t    emulator_loop_environment_cb(void);
// ── Pixel format (set once after RETRO_ENVIRONMENT_SET_PIXEL_FORMAT) ───────
void emulator_loop_set_pixel_format(int32_t format);
// ── Native game loop ───────────────────────────────────────────────────────
typedef void (*emu_retro_run_t)(void);
void emulator_loop_start(emu_retro_run_t retro_run, double fps);
// Run [count] frames on a dedicated native thread (NOT the Dart isolate).
// Safe only while emulator_loop_start() has not been called yet.
void emulator_loop_run_frames(emu_retro_run_t retro_run, uint32_t count);
// ── Libretro directories (set from Dart before retro_load_game) ───────────
void emulator_loop_set_save_directory(const char* path);
void emulator_loop_set_system_directory(const char* path);
void emulator_loop_set_content_directory(const char* path);
// ── Controller ports (from RETRO_ENVIRONMENT_SET_CONTROLLER_INFO) ─────────
void emulator_loop_reset_controller_ports(void);
unsigned emulator_loop_get_controller_ports(void);
// ── Netplay rollback snapshots (same thread as retro_run only) ────────────
typedef bool (*emu_snapshot_fn)(void* data, size_t size);
typedef bool (*emu_restore_fn)(void* data, size_t size);
void emulator_loop_netplay_begin(emu_snapshot_fn serialize, emu_restore_fn restore,
                                 size_t state_size, int32_t max_frames);
void emulator_loop_netplay_end(void);
bool emulator_loop_netplay_load_frame(uint64_t frame);
uint64_t emulator_loop_netplay_sim_frame(void);
void emulator_loop_netplay_set_sim_frame(uint64_t frame);
// ── gpSP RFU / wireless netpacket bridge ─────────────────────────────────
void emulator_loop_set_gpsp_serial_mode(const char* mode);
bool emulator_loop_netpacket_available(void);
void emulator_loop_netpacket_start(uint16_t local_client_id);
void emulator_loop_netpacket_stop(void);
bool emulator_loop_netpacket_connect(uint16_t client_id);
void emulator_loop_netpacket_disconnect(uint16_t client_id);
int32_t emulator_loop_netpacket_read(uint16_t* target_client_id_out,
                                     int32_t* flags_out,
                                     uint8_t* out,
                                     int32_t max_bytes);
void emulator_loop_netpacket_push(const uint8_t* data, int32_t size,
                                  uint16_t source_client_id);