lib/core/emulator_loop/emulator_loop_ffi.dart

import 'dart:ffi' hide Size;
import 'dart:io';
import 'dart:typed_data';

import 'package:ffi/ffi.dart';

import '../libretro/libretro_bindings.dart';

// ── Save directory ──────────────────────────────────────────────────────────
typedef _SetSaveDirNative = Void Function(Pointer<Utf8>);
typedef _SetSaveDirDart = void Function(Pointer<Utf8>);

void setSaveDirectory(String path) {
  _setNativePath('emulator_loop_set_save_directory', path);
}

void setSystemDirectory(String path) {
  _setNativePath('emulator_loop_set_system_directory', path);
}

void setContentDirectory(String path) {
  _setNativePath('emulator_loop_set_content_directory', path);
}

void _setNativePath(String symbol, String path) {
  final setDir = emuLoopLib.lookupFunction<_SetSaveDirNative, _SetSaveDirDart>(
    symbol,
  );
  final ptr = path.toNativeUtf8(allocator: malloc);
  try {
    setDir(ptr);
  } finally {
    malloc.free(ptr);
  }
}

typedef _ResetPortsNative = Void Function();
typedef _ResetPortsDart = void Function();
final _resetControllerPorts = emuLoopLib
    .lookupFunction<_ResetPortsNative, _ResetPortsDart>(
      'emulator_loop_reset_controller_ports',
    );

typedef _GetPortsNative = Uint32 Function();
typedef _GetPortsDart = int Function();
final _getControllerPorts = emuLoopLib
    .lookupFunction<_GetPortsNative, _GetPortsDart>(
      'emulator_loop_get_controller_ports',
    );

void resetControllerPortCount() => _resetControllerPorts();

/// Joypad ports reported by the core after [retro_load_game] (0 if unknown).
int getControllerPortCount() => _getControllerPorts();

/// Native library (same binary as game_texture on both platforms).
final DynamicLibrary emuLoopLib = () {
  if (Platform.isAndroid) return DynamicLibrary.open('libgame_texture.so');
  return DynamicLibrary.process();
}();

// ── Callback getter types ──────────────────────────────────────────────────
// Each getter returns the *address* of the corresponding pure-C callback
// function so Dart can pass it to retro_set_XXX.

typedef _GetVideoCbNative =
    Pointer<NativeFunction<retro_video_refresh_t>> Function();
typedef _GetAudioBatchCbNative =
    Pointer<NativeFunction<retro_audio_sample_batch_t>> Function();
typedef _GetAudioSingleCbNative =
    Pointer<NativeFunction<retro_audio_sample_t>> Function();
typedef _GetInputPollCbNative =
    Pointer<NativeFunction<retro_input_poll_t>> Function();
typedef _GetInputStateCbNative =
    Pointer<NativeFunction<retro_input_state_t>> Function();
typedef _GetEnvCbNative =
    Pointer<NativeFunction<retro_environment_t>> Function();

final _getVideoCb = emuLoopLib
    .lookupFunction<_GetVideoCbNative, _GetVideoCbNative>(
      'emulator_loop_video_cb',
    );
final _getAudioBatchCb = emuLoopLib
    .lookupFunction<_GetAudioBatchCbNative, _GetAudioBatchCbNative>(
      'emulator_loop_audio_batch_cb',
    );
final _getAudioSingleCb = emuLoopLib
    .lookupFunction<_GetAudioSingleCbNative, _GetAudioSingleCbNative>(
      'emulator_loop_audio_single_cb',
    );
final _getInputPollCb = emuLoopLib
    .lookupFunction<_GetInputPollCbNative, _GetInputPollCbNative>(
      'emulator_loop_input_poll_cb',
    );
final _getInputStateCb = emuLoopLib
    .lookupFunction<_GetInputStateCbNative, _GetInputStateCbNative>(
      'emulator_loop_input_state_cb',
    );
final _getEnvCb = emuLoopLib.lookupFunction<_GetEnvCbNative, _GetEnvCbNative>(
  'emulator_loop_environment_cb',
);

/// Returns pure-C callbacks that can be passed to retro_set_XXX.
Pointer<NativeFunction<retro_video_refresh_t>> getVideoCb() => _getVideoCb();
Pointer<NativeFunction<retro_audio_sample_batch_t>> getAudioBatchCb() =>
    _getAudioBatchCb();
Pointer<NativeFunction<retro_audio_sample_t>> getAudioSingleCb() =>
    _getAudioSingleCb();
Pointer<NativeFunction<retro_input_poll_t>> getInputPollCb() =>
    _getInputPollCb();
Pointer<NativeFunction<retro_input_state_t>> getInputStateCb() =>
    _getInputStateCb();
Pointer<NativeFunction<retro_environment_t>> getEnvCb() => _getEnvCb();

// ── Pixel format ───────────────────────────────────────────────────────────
typedef _SetFmtNative = Void Function(Int32);
typedef _SetFmtDart = void Function(int);
final _setPixelFmt = emuLoopLib.lookupFunction<_SetFmtNative, _SetFmtDart>(
  'emulator_loop_set_pixel_format',
);

void setPixelFormat(int format) => _setPixelFmt(format);

// ── Loop control ───────────────────────────────────────────────────────────
typedef _StartNative =
    Void Function(Pointer<NativeFunction<Void Function()>>, Double);
typedef _StartDart =
    void Function(Pointer<NativeFunction<Void Function()>>, double);
final _startLoop = emuLoopLib.lookupFunction<_StartNative, _StartDart>(
  'emulator_loop_start',
);

void startNativeLoop(
  Pointer<NativeFunction<Void Function()>> retroRunPtr,
  double fps,
) => _startLoop(retroRunPtr, fps);

// ── Netplay rollback snapshots (C ring; same thread as retro_run) ───────────
typedef _SnapshotNative = Bool Function(Pointer<Void>, UintPtr);
typedef _SnapshotDart = bool Function(Pointer<Void>, int);

typedef _NetplayBeginNative =
    Void Function(
      Pointer<NativeFunction<_SnapshotNative>>,
      Pointer<NativeFunction<_SnapshotNative>>,
      UintPtr,
      Int32,
    );
typedef _NetplayBeginDart =
    void Function(
      Pointer<NativeFunction<_SnapshotNative>>,
      Pointer<NativeFunction<_SnapshotNative>>,
      int,
      int,
    );
final _netplayBegin = emuLoopLib
    .lookupFunction<_NetplayBeginNative, _NetplayBeginDart>(
      'emulator_loop_netplay_begin',
    );

typedef _NetplayEndNative = Void Function();
typedef _NetplayEndDart = void Function();
final _netplayEnd = emuLoopLib
    .lookupFunction<_NetplayEndNative, _NetplayEndDart>(
      'emulator_loop_netplay_end',
    );

typedef _NetplayLoadNative = Bool Function(Uint64);
typedef _NetplayLoadDart = bool Function(int);
final _netplayLoad = emuLoopLib
    .lookupFunction<_NetplayLoadNative, _NetplayLoadDart>(
      'emulator_loop_netplay_load_frame',
    );

typedef _NetplaySimFrameNative = Uint64 Function();
typedef _NetplaySimFrameDart = int Function();
final _netplaySimFrame = emuLoopLib
    .lookupFunction<_NetplaySimFrameNative, _NetplaySimFrameDart>(
      'emulator_loop_netplay_sim_frame',
    );

typedef _NetplaySetSimNative = Void Function(Uint64);
typedef _NetplaySetSimDart = void Function(int);
final _netplaySetSimFrame = emuLoopLib
    .lookupFunction<_NetplaySetSimNative, _NetplaySetSimDart>(
      'emulator_loop_netplay_set_sim_frame',
    );

void beginNetplaySnapshots({
  required Pointer<NativeFunction<_SnapshotNative>> serialize,
  required Pointer<NativeFunction<_SnapshotNative>> restore,
  required int stateSize,
  required int maxFrames,
}) {
  _netplayBegin(serialize, restore, stateSize, maxFrames);
}

void endNetplaySnapshots() => _netplayEnd();

bool netplayLoadFrame(int frame) => _netplayLoad(frame);

int netplaySimFrame() => _netplaySimFrame();

void netplaySetSimFrame(int frame) => _netplaySetSimFrame(frame);

// ── gpSP serial netpacket bridge ──────────────────────────────────────────
typedef _SetGpspSerialModeNative = Void Function(Pointer<Utf8>);
typedef _SetGpspSerialModeDart = void Function(Pointer<Utf8>);
final _setGpspSerialMode = emuLoopLib
    .lookupFunction<_SetGpspSerialModeNative, _SetGpspSerialModeDart>(
      'emulator_loop_set_gpsp_serial_mode',
    );

void setGpspSerialMode(String mode) {
  final normalized = switch (mode) {
    'disabled' => 'disabled',
    'rfu' => 'rfu',
    'mul_poke' => 'mul_poke',
    'mul_aw1' => 'mul_aw1',
    'mul_aw2' => 'mul_aw2',
    _ => 'auto',
  };
  final ptr = normalized.toNativeUtf8(allocator: malloc);
  try {
    _setGpspSerialMode(ptr);
  } finally {
    malloc.free(ptr);
  }
}

typedef _NetpacketAvailableNative = Bool Function();
typedef _NetpacketAvailableDart = bool Function();
final _netpacketAvailable = emuLoopLib
    .lookupFunction<_NetpacketAvailableNative, _NetpacketAvailableDart>(
      'emulator_loop_netpacket_available',
    );

typedef _NetpacketStartNative = Void Function(Uint16);
typedef _NetpacketStartDart = void Function(int);
final _netpacketStart = emuLoopLib
    .lookupFunction<_NetpacketStartNative, _NetpacketStartDart>(
      'emulator_loop_netpacket_start',
    );

typedef _NetpacketStopNative = Void Function();
typedef _NetpacketStopDart = void Function();
final _netpacketStop = emuLoopLib
    .lookupFunction<_NetpacketStopNative, _NetpacketStopDart>(
      'emulator_loop_netpacket_stop',
    );

typedef _NetpacketConnectNative = Bool Function(Uint16);
typedef _NetpacketConnectDart = bool Function(int);
final _netpacketConnect = emuLoopLib
    .lookupFunction<_NetpacketConnectNative, _NetpacketConnectDart>(
      'emulator_loop_netpacket_connect',
    );

typedef _NetpacketDisconnectNative = Void Function(Uint16);
typedef _NetpacketDisconnectDart = void Function(int);
final _netpacketDisconnect = emuLoopLib
    .lookupFunction<_NetpacketDisconnectNative, _NetpacketDisconnectDart>(
      'emulator_loop_netpacket_disconnect',
    );

typedef _NetpacketReadNative =
    Int32 Function(Pointer<Uint16>, Pointer<Int32>, Pointer<Uint8>, Int32);
typedef _NetpacketReadDart =
    int Function(Pointer<Uint16>, Pointer<Int32>, Pointer<Uint8>, int);
final _netpacketRead = emuLoopLib
    .lookupFunction<_NetpacketReadNative, _NetpacketReadDart>(
      'emulator_loop_netpacket_read',
    );

typedef _NetpacketPushNative = Void Function(Pointer<Uint8>, Int32, Uint16);
typedef _NetpacketPushDart = void Function(Pointer<Uint8>, int, int);
final _netpacketPush = emuLoopLib
    .lookupFunction<_NetpacketPushNative, _NetpacketPushDart>(
      'emulator_loop_netpacket_push',
    );

class GbaNetpacket {
  const GbaNetpacket({
    required this.targetClientId,
    required this.flags,
    required this.bytes,
  });

  final int targetClientId;
  final int flags;
  final Uint8List bytes;
}

const int gbaNetpacketBroadcast = 0xFFFF;
const int _gbaNetpacketMaxBytes = 65536;
final Pointer<Uint8> _gbaNetpacketBuf = calloc<Uint8>(_gbaNetpacketMaxBytes);
final Pointer<Uint16> _gbaNetpacketTarget = calloc<Uint16>();
final Pointer<Int32> _gbaNetpacketFlags = calloc<Int32>();

bool isGbaNetpacketAvailable() => _netpacketAvailable();

void startGbaNetpacketSession(int localClientId) {
  _netpacketStart(localClientId.clamp(0, gbaNetpacketBroadcast).toInt());
}

void stopGbaNetpacketSession() => _netpacketStop();

bool connectGbaNetpacketClient(int clientId) =>
    _netpacketConnect(clientId.clamp(0, gbaNetpacketBroadcast).toInt());

void disconnectGbaNetpacketClient(int clientId) =>
    _netpacketDisconnect(clientId.clamp(0, gbaNetpacketBroadcast).toInt());

GbaNetpacket? readGbaNetpacket() {
  final size = _netpacketRead(
    _gbaNetpacketTarget,
    _gbaNetpacketFlags,
    _gbaNetpacketBuf,
    _gbaNetpacketMaxBytes,
  );
  if (size <= 0) {
    return null;
  }
  return GbaNetpacket(
    targetClientId: _gbaNetpacketTarget.value,
    flags: _gbaNetpacketFlags.value,
    bytes: Uint8List.fromList(_gbaNetpacketBuf.asTypedList(size)),
  );
}

void pushGbaNetpacket(Uint8List bytes, {required int sourceClientId}) {
  if (bytes.isEmpty) {
    return;
  }
  final size = bytes.length.clamp(0, _gbaNetpacketMaxBytes);
  final ptr = malloc<Uint8>(size);
  try {
    ptr.asTypedList(size).setAll(0, bytes.take(size));
    _netpacketPush(
      ptr,
      size,
      sourceClientId.clamp(0, gbaNetpacketBroadcast).toInt(),
    );
  } finally {
    malloc.free(ptr);
  }
}

typedef _RunFramesNative =
    Void Function(Pointer<NativeFunction<Void Function()>>, Uint32);
typedef _RunFramesDart =
    void Function(Pointer<NativeFunction<Void Function()>>, int);
final _runFrames = emuLoopLib.lookupFunction<_RunFramesNative, _RunFramesDart>(
  'emulator_loop_run_frames',
);
